--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
 
   web-app:
     container_name: web-app
+    image: hungnguyen008/web-app:1.0.3
     build:
       context: .
       dockerfile: ./Dockerfile
