--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,9 @@ services:
     networks:
       - monitoring
 
-  web-sellbook:
-    image: hungnguyen008/web-sellbook:1.0.3
-    container_name: web-sellbook
+  web-app:
+    image: hungnguyen008/web-app:1.0.3
+    container_name: web-app
     ports:
       - "8082:8082"
     environment:
